--- a/my-time.html
+++ b/my-time.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="left"><a href="#" class="form-back link"><i class="icon icon-back"></i></a></div>
-                <div class="center sliding">可预约患者数量</div>
+                <div class="center sliding">日程表</div>
                 <div class="right"><a href="#" class="link time-save">保存</a></div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                                     <div class="item-content">
                                         <div class="item-media"><i class="icon icon-oval"></i></div>
                                         <div class="item-inner">
-                                            <div class="item-title">停诊时间</div>
+                                            <div class="item-title currenTime">当前时间:</div>
                                         </div>
                                     </div>
                                 </a>
@@ -145,9 +145,9 @@
         <!-- Path to your app js-->
         <script type="text/javascript" src="js/my-app.js"></script>
         <script src="Scripts/jquery-1.11.3.min.js" type="text/javascript"></script>
-        <script src="cordova.js"></script>
-        <script src="cordova_plugins.js"></script>
-        <script src="Scripts/FrameJs/global.js"></script>
+        <!--<script src="cordova.js"></script>-->
+        <!--<script src="cordova_plugins.js"></script>-->
+        <!--<script src="Scripts/FrameJs/global.js"></script>-->
         <script src="Scripts/FrameJs/frame.ajax.js"></script>
         <script type="text/javascript">
             document.addEventListener("deviceready", onDeviceReady, false);
@@ -157,6 +157,7 @@
                 pictureSource = navigator.camera.PictureSourceType;
                 destinationType = navigator.camera.DestinationType;
             }
+            $("currenTime").text("s");
 
             function onBackKeyDown(){
                 var am_orderquantity = new Array(
