--- a/my-time.html
+++ b/my-time.html
@@ -147,7 +147,7 @@
         <script src="Scripts/jquery-1.11.3.min.js" type="text/javascript"></script>
         <!--<script src="cordova.js"></script>-->
         <!--<script src="cordova_plugins.js"></script>-->
-        <!--<script src="Scripts/FrameJs/global.js"></script>-->
+        <script src="Scripts/FrameJs/global.js"></script>
         <script src="Scripts/FrameJs/frame.ajax.js"></script>
         <script type="text/javascript">
             document.addEventListener("deviceready", onDeviceReady, false);
@@ -157,7 +157,7 @@
                 pictureSource = navigator.camera.PictureSourceType;
                 destinationType = navigator.camera.DestinationType;
             }
-            $("currenTime").text("s");
+            $(".currenTime").text("当前时间:"+new Date().format("yyyy年MM月dd日 hh时:mm分:ss秒"));
 
             function onBackKeyDown(){
                 var am_orderquantity = new Array(
